# qkit-services

./: README.md
ganymed/: .gitignore  README.md  ganymed.cfg  ganymed.toml  pyproject.toml
ganymed/jupyter-config/jupyter_server_config.d/: ganymed.json
ganymed/src/ganymed/: __init__.py  ganymed.py
rt-switch/: .gitignore  README.md  config.toml  pyproject.toml  rt-mw-switch.service
rt-switch/src/rt_switch/: switch_server.py
